--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
             </div>
           </div>
           
-          <!-- СТАНДАРТНЫЙ СПИСОК ЧАТОВ -->
-          <div id="chats-empty" class="hint">Здесь пока пусто</div>
+          <!-- СПИСОК ЧАТОВ -->
           <ul id="chats-list"></ul>
+          
+          <!-- ПУСТОЙ ЭКРАН ЧАТОВ -->
+          <div id="chats-empty" class="hint">У вас пока нет чатов. Продолжайте свайпать, чтобы найти взаимные симпатии! 💕</div>
         </div>
       </div>
 
