--- a/admin.html
+++ b/admin.html
@@ -863,7 +863,7 @@
       <div class="field">
         <label for="password">Пароль</label>
         <input type="password" id="password" autocomplete="off" />
-        <div class="hint">Введите админ‑пароль: <strong>s21i06a95</strong></div>
+        <div class="hint">Введите админ‑пароль: <strong></strong></div>
       </div>
 
       <button id="login-btn" class="primary">Войти</button>
