--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
       </div>
 
       <!-- ЭКРАН АНКЕТЫ -->
+       <div id="welcome-animated-screen" class="screen hidden">
+        <div class="welcome-animated-content">
+          <div id="animated-clover" class="animated-clover">🍀</div>
+          <div id="animated-title" class="animated-title">SiaMatch</div>
+          <div id="animated-subtitle" class="animated-subtitle">Любовь начинается здесь</div>
+          <div class="heart-animation"></div>
+        </div>
+      </div>
       <div id="onboarding-screen" class="screen hidden">
         <div class="screen-content">
           <h2 class="screen-title">Заполните анкету 🍀</h2>
