--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="app-root">
     <div id="card">
       <!-- ЭКРАН ПРИВЕТСТВИЯ -->
-      <div id="welcome-screen">
+      <div id="welcome-screen" class="hidden">
         <div class="welcome-logo">🍀</div>
         <div class="welcome-title">SiaMatch</div>
         <div class="welcome-subtitle">Найди свою пару</div>
