--- a/index.html
+++ b/index.html
@@ -26,29 +26,35 @@
         <button id="startBtn" class="primary">Начать знакомство</button>
       </div>
 
-      <!-- НОВЫЙ АНИМИРОВАННЫЙ ЭКРАН ПРИВЕТСТВИЯ -->
-      <div id="welcome-animated-screen" class="screen hidden">
-        <div class="welcome-animated-content">
-          <div id="animated-clover" class="animated-clover">🍀</div>
-          <div id="animated-title" class="animated-title">SiaMatch</div>
-          <div id="animated-subtitle" class="animated-subtitle">Любовь начинается здесь</div>
-          
-          <!-- НОВОЕ СЕРДЦЕ, КОТОРОЕ РИСУЕТСЯ -->
-          <div class="heart-container">
-            <svg class="heart-svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-              <!-- Путь сердца - рисуется постепенно -->
-              <path class="heart-path" d="
-                M 50,30 
-                C 60,15 80,15 85,30 
-                C 90,45 75,60 50,75 
-                C 25,60 10,45 15,30 
-                C 20,15 40,15 50,30
-                Z
-              " />
-            </svg>
-          </div>
-        </div>
+<!-- НОВЫЙ АНИМИРОВАННЫЙ ЭКРАН ПРИВЕТСТВИЯ -->
+<div id="welcome-animated-screen" class="screen hidden">
+  <!-- Контейнер с flexbox колоннами -->
+  <div class="welcome-animated-layout">
+    <!-- ВЕРХНЯЯ ЧАСТЬ: весь текст -->
+    <div class="welcome-text-content">
+      <div id="animated-clover" class="animated-clover">🍀</div>
+      <div id="animated-title" class="animated-title">SiaMatch</div>
+      <div id="animated-subtitle" class="animated-subtitle">Любовь начинается здесь</div>
+    </div>
+    
+    <!-- НИЖНЯЯ ЧАСТЬ: сердце -->
+    <div class="heart-container-wrapper">
+      <div class="heart-container">
+        <svg class="heart-svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
+          <!-- Путь сердца - рисуется постепенно -->
+          <path class="heart-path" d="
+            M 50,30 
+            C 60,15 80,15 85,30 
+            C 90,45 75,60 50,75 
+            C 25,60 10,45 15,30 
+            C 20,15 40,15 50,30
+            Z
+          " />
+        </svg>
       </div>
+    </div>
+  </div>
+</div>
 
       <!-- ЭКРАН АНКЕТЫ -->
       <div id="onboarding-screen" class="screen hidden">
