--- a/index.html
+++ b/index.html
@@ -152,16 +152,11 @@
         </div>
       </div>
 
-      <!-- ЭКРАН ЛЕНТЫ -->
-      <div id="screen-feed" class="screen hidden">
-        <div class="screen-content">
-          <!-- ЗАГОЛОВОК С КНОПКОЙ ФИЛЬТРОВ -->
-          <div class="feed-header">
-            <h2 class="screen-title">Познакомьтесь 🍀</h2>
-            <button id="open-filters-btn" class="filters-toggle-btn">
-              🔍 Фильтры
-            </button>
-          </div>
+<!-- ЭКРАН ЛЕНТЫ -->
+<div id="screen-feed" class="screen hidden">
+  <div class="screen-content">
+    <!-- ЗАГОЛОВОК -->
+    <h2 class="screen-title">Познакомьтесь 🍀</h2>
           
           <!-- ОБНОВЛЕННАЯ АНКЕТА ДЛЯ СВАЙПОВ -->
           <div id="candidate-card">
