--- a/index.html
+++ b/index.html
@@ -713,6 +713,8 @@
   <div id="swipe-feedback" class="swipe-feedback hidden"></div>
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="js/logic.js"></script>
+  <script src="js/ui.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
