--- a/index.html
+++ b/index.html
@@ -367,7 +367,11 @@
             
             <!-- ФОТО И ОСНОВНАЯ ИНФОРМАЦИЯ -->
             <div class="profile-info-card">
+              <!-- ✅ ДОБАВЛЕНО: Основное фото профиля -->
               <div class="profile-photo-section">
+                <img id="profile-photo-preview" class="profile-photo" src="" alt="Фото профиля" style="display: none;">
+                
+                <!-- Контейнер для галереи фото -->
                 <div class="profile-photos-container">
                   <!-- Фото будут добавлены динамически -->
                 </div>
