--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 <div class="profile-photo-indicators"></div>
                 
                 <div class="profile-photo-controls">
-                  <button id="add-photo-btn" class="add-photo-btn">📸 Добавить фото</button>
+                  <button id="add-photo-btn" class="add-photo-btn" onclick="document.getElementById('profile-photo-upload').click(); console.log('🔥 КНОПКА РАБОТАЕТ!');">📸 Добавить фото</button>
                   <button id="remove-photo-btn" class="remove-photo-btn">🗑️ Удалить текущее</button>
                 </div>
                 
