--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
               <!-- ОСНОВНОЕ ФОТО -->
               <img id="candidate-photo" src="" alt="Фото" class="active-photo" />
               
+              <div class="photo-nav-buttons">
+                <button class="photo-prev-btn" onclick="switchPhoto(-1)">◀</button>
+                <button class="photo-next-btn" onclick="switchPhoto(1)">▶</button>
+              </div>
+              
               <!-- ИНДИКАТОРЫ ДЛЯ ФОТОГРАФИЙ -->
               <div class="photo-indicators"></div>
             </div>
