--- a/index.html
+++ b/index.html
@@ -727,5 +727,6 @@
   <script src="js/logic.js"></script>
   <script src="js/ui.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/photoStorage.js"></script>
 </body>
 </html>
