--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
               <img id="candidate-photo" src="" alt="Фото" class="active-photo" />
               
               <div class="photo-nav-buttons">
-                <button class="photo-prev-btn" onclick="switchPhoto(-1)">◀</button>
-                <button class="photo-next-btn" onclick="switchPhoto(1)">▶</button>
+                <button class="swipe-prev-btn" onclick="switchPhoto(-1)">◀</button>
+                <button class="swipe-next-btn" onclick="switchPhoto(1)">▶</button>
               </div>
               
               <!-- ИНДИКАТОРЫ ДЛЯ ФОТОГРАФИЙ -->
