--- a/index.html
+++ b/index.html
@@ -764,9 +764,9 @@
             <div class="invite-friend-id-section">
               <h4>Если друг уже зарегистрировался</h4>
               <div class="field">
-                <label for="friend-id">ID вашего друга</label>
-                <input type="text" id="friend-id" placeholder="Введите ID друга" />
-                <div class="hint">ID можно найти в профиле друга</div>
+                <label for="friend-id">@ник вашего друга в telegram</label>
+                <input type="text" id="friend-id" placeholder="Введите @name" />
+                <div class="hint">@Ник можно найти в профиле друга</div>
               </div>
               <button id="submit-friend-id" class="primary">Подтвердить приглашение</button>
             </div>
